# avior

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
docs/adr/: 001-design-philosophy.md
examples/: 01_hello_anthropic.py  02_hello_openai.py  03_local_tool.py  04_tool_with_deps.py  05_tool_decorator.py  06_cross_provider_thinking.py
src/avior/core/: __init__.py  _logging.py  agent.py  context.py  exceptions.py  messages.py  provider.py  result.py  runner.py  testing.py  tools.py  usage.py  warnings.py
src/avior/providers/: __init__.py  anthropic.py  gemini.py  openai_responses.py
tests/integration/: conftest.py  test_anthropic_provider.py  test_gemini_provider.py  test_openai_responses_provider.py
tests/typing/: README.md  deps.py  function_tool.py
tests/unit/core/: test_agent.py  test_function_tool.py  test_logging.py  test_messages.py  test_runner.py  test_runner_tools.py  test_testing.py  test_tools.py  test_usage.py  test_warnings.py
tests/unit/providers/: test_anthropic.py  test_gemini.py  test_openai_responses.py
