[project]
name = "avior"
version = "0.0.1.dev0"
description = "A Python library for building LLM agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "ISC" }
authors = [
    { name = "Vadzim Shender", email = "vadzim@shender.org" },
]
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.50",
]
all = [
    "avior[anthropic,openai]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avior"]

[dependency-groups]
dev = [
    "basedpyright>=1.39",
    "mypy>=1.20",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.mypy]
files = ["src", "tests"]
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/avior"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@runtime_checkable",
]
