[project]
name = "avior"
version = "0.1.0a1"
description = "A Python library for building LLM agents."
readme = "README.md"
requires-python = ">=3.12"
license = "ISC"
license-files = ["LICENSE"]
authors = [
    { name = "Vadzim Shender", email = "vadzim@shender.org" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "docstring-parser>=0.16",
    "pydantic>=2.10.1",
    "typing-extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/vshender/avior"
Repository = "https://github.com/vshender/avior"
Issues = "https://github.com/vshender/avior/issues"

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.71",
]
openai = [
    "openai>=2.0",
]
gemini = [
    "google-genai>=2.7.0",
]
all = [
    "avior[anthropic,openai,gemini]",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/*~",
    "**/__pycache__",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "examples",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/avior"]

[dependency-groups]
dev = [
    "basedpyright>=1.39",
    "mypy>=1.20",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
# basedpyright honors `# type: ignore` by default, the same as mypy.  Turning
# that off is a deliberate split: each checker owns its suppressions - mypy
# keeps reading `# type: ignore[code]`, basedpyright reads only
# `# pyright: ignore[rule]`.  The two disagree on which lines need a suppression
# (e.g. pydantic's `@computed_field` trips mypy but not basedpyright), so
# without the split a mypy-only `# type: ignore` would read as "unnecessary" to
# basedpyright and fail the rule below.
enableTypeIgnoreComments = false
# Flag a `# pyright: ignore` that no longer suppresses anything.  This makes the
# negative deps-compatibility fixtures in `tests/typing` self-checking: if a
# regression widened the types so an incompatible tool/agent pair stopped being
# rejected, the now-unnecessary suppression fails the build.  (mypy gets the
# same guard from `strict`'s `warn_unused_ignores`.)
reportUnnecessaryTypeIgnoreComment = "error"

[tool.mypy]
files = ["src", "tests"]
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/avior"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@runtime_checkable",
]
